--- a/Notes.Web/Views/UploadFiles/Index.cshtml
+++ b/Notes.Web/Views/UploadFiles/Index.cshtml
@@ -6,21 +6,29 @@
 
 <h2 class="pb-2 mb-4 border-bottom">@ViewData["Title"]</h2>
 
-<table class="table">
+<table class="table table-bordered table-hover">
     <thead>
         <tr>
-            <th>@Html.DisplayNameFor(model => model.Id)</th>
-            <th>@Html.DisplayNameFor(model => model.FileName)</th>
-            <th>@Html.DisplayNameFor(model => model.ContentType)</th>
+            <th class="text-center">@Html.DisplayNameFor(model => model.Id)</th>
+            <th class="text-center">@Html.DisplayNameFor(model => model.FileName)</th>
+            <th class="text-center">@Html.DisplayNameFor(model => model.ContentType)</th>
+            <th class="text-center">@Html.DisplayNameFor(model => model.Length)</th>
+            <th class="text-center">アクション</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
             <tr>
-                <td>@Html.DisplayFor(_ => item.Id)</td>
-                <td>@Html.DisplayFor(_ => item.FileName)</td>
-                <td>@Html.DisplayFor(_ => item.ContentType)</td>
+                <td class="vertical-middle text-center">@Html.DisplayFor(_ => item.Id)</td>
+                <td class="vertical-middle">@Html.DisplayFor(_ => item.FileName)</td>
+                <td class="vertical-middle text-center">@Html.DisplayFor(_ => item.ContentType)</td>
+                <td class="vertical-middle text-right">@Html.DisplayFor(_ => item.Length)</td>
+                <td class="vertical-middle text-center">
+                    <a class="btn btn-outline-primary btn-sm" asp-controller="UploadFiles" asp-action="Details" asp-route-id="@item.Id">詳細</a>
+                    <a class="btn btn-outline-primary btn-sm" asp-controller="UploadFiles" asp-action="Edit" asp-route-id="@item.Id">編集</a>
+                    <a class="btn btn-outline-primary btn-sm" asp-controller="UploadFiles" asp-action="Delete" asp-route-id="@item.Id">削除</a>
+                </td>
             </tr>
         }
     </tbody>
