--- a/Notes.Web/Views/UploadFiles/Create.cshtml
+++ b/Notes.Web/Views/UploadFiles/Create.cshtml
@@ -1,20 +1,21 @@
 ﻿@model UploadFileViewModel
+@inject IViewLocalizer Localizer
 
 @{
-    ViewData["Title"] = "ファイル登録";
+    ViewData["Title"] = Localizer["Create upload file"];
 }
 
 <h2 class="pb-2 mb-4 border-bottom">@ViewData["Title"]</h2>
 
 <form method="post" enctype="multipart/form-data" role="form" asp-controller="UploadFiles" asp-action="Create">
     <div class="form-group row">
-        <label for="file" class="col-sm-2 col-form-label">ファイル</label>
+        <label for="file" class="col-sm-2 col-form-label">@Localizer["File"]</label>
         <div class="col-sm-10">
             <input type="file" id="file" class="form-control-file" asp-for="File" />
         </div>
     </div>
     <div class="form-group row">
-        <label for="fileName" class="col-sm-2 col-form-label">ファイル名</label>
+        <label for="fileName" class="col-sm-2 col-form-label">@Localizer["File Name"]</label>
         <div class="col-sm-10">
             <input type="text" id="fileName" class="form-control" asp-for="FileName" />
         </div>
@@ -22,7 +23,7 @@
     <div class="form-group row mainbtn-area">
         <div class="col-sm-12">
             <div class="float-right">
-                <input type="submit" value="登録" class="btn btn-primary" />
+                <input type="submit" value="@Localizer["Create"]" class="btn btn-primary" />
             </div>
         </div>
     </div>
