--- a/Notes.Web/Views/UploadFiles/Edit.cshtml
+++ b/Notes.Web/Views/UploadFiles/Edit.cshtml
@@ -1,5 +1,7 @@
-﻿@{
-    ViewData["Title"] = "ファイル編集";
+﻿@inject IViewLocalizer Localizer
+
+@{
+    ViewData["Title"] = Localizer["Edit upload file"];
 }
 
 <h2 class="pb-2 mb-4 border-bottom">@ViewData["Title"]</h2>
