--- a/Notes.Web/Views/_ViewImports.cshtml
+++ b/Notes.Web/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-﻿@using Notes.Web.Models
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using Notes.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
