--- a/Notes.Web/Views/UploadFiles/Create.cshtml
+++ b/Notes.Web/Views/UploadFiles/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@model UploadFileViewModel
-@inject IViewLocalizer Localizer
+﻿@inject IViewLocalizer Localizer
+@model UploadFileViewModel
 
 @{
     ViewData["Title"] = Localizer["Create upload file"];
@@ -9,13 +9,13 @@
 
 <form method="post" enctype="multipart/form-data" role="form" asp-controller="UploadFiles" asp-action="Create">
     <div class="form-group row">
-        <label for="file" class="col-sm-2 col-form-label">@Localizer["File"]</label>
+        <label for="file" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.File)</label>
         <div class="col-sm-10">
             <input type="file" id="file" class="form-control-file" asp-for="File" />
         </div>
     </div>
     <div class="form-group row">
-        <label for="fileName" class="col-sm-2 col-form-label">@Localizer["File Name"]</label>
+        <label for="fileName" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.FileName)</label>
         <div class="col-sm-10">
             <input type="text" id="fileName" class="form-control" asp-for="FileName" />
         </div>
