--- a/Notes.Web/Views/UploadFiles/Details.cshtml
+++ b/Notes.Web/Views/UploadFiles/Details.cshtml
@@ -1,7 +1,35 @@
 ﻿@inject IViewLocalizer Localizer
+@model UploadFileViewModel
 
 @{
     ViewData["Title"] = Localizer["Details upload file"];
 }
 
 <h2 class="pb-2 mb-4 border-bottom">@ViewData["Title"]</h2>
+
+<div class="form-group row">
+    <label for="file" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.FileName)</label>
+    <div class="col-sm-10 col-form-label">
+        <p class="form-control-static">@Html.DisplayFor(model => model.FileName)</p>
+    </div>
+</div>
+<div class="form-group row">
+    <label for="file" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.ContentType)</label>
+    <div class="col-sm-10 col-form-label">
+        <p class="form-control-static">@Html.DisplayFor(model => model.ContentType)</p>
+    </div>
+</div>
+<div class="form-group row">
+    <label for="file" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.Length)</label>
+    <div class="col-sm-10 col-form-label">
+        <p class="form-control-static">@Localizer["{0} bytes", @Html.DisplayFor(model => model.Length)]</p>
+    </div>
+</div>
+
+<div class="form-group row mainbtn-area">
+    <div class="col-sm-12">
+        <div class="float-right">
+            <a class="btn btn-primary" asp-controller="UploadFiles" asp-action="Download" asp-route-id="@Model.Id">@Localizer["Download"]</a>
+        </div>
+    </div>
+</div>
