--- a/Notes.Web/Views/UploadFiles/Create.cshtml
+++ b/Notes.Web/Views/UploadFiles/Create.cshtml
@@ -1,5 +1,4 @@
 ﻿@inject IViewLocalizer Localizer
-@model UploadFileViewModel
 
 @{
     ViewData["Title"] = Localizer["Create upload file"];
@@ -8,18 +7,7 @@
 <h2 class="pb-2 mb-4 border-bottom">@ViewData["Title"]</h2>
 
 <form method="post" enctype="multipart/form-data" role="form" asp-controller="UploadFiles" asp-action="Create">
-    <div class="form-group row">
-        <label for="file" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.File)</label>
-        <div class="col-sm-10">
-            <input type="file" id="file" class="form-control-file" asp-for="File" />
-        </div>
-    </div>
-    <div class="form-group row">
-        <label for="fileName" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.FileName)</label>
-        <div class="col-sm-10">
-            <input type="text" id="fileName" class="form-control" asp-for="FileName" />
-        </div>
-    </div>
+    <partial name="_Form" />
     <div class="form-group row mainbtn-area">
         <div class="col-sm-12">
             <div class="float-right">
