--- a/Notes.Web/Views/UploadFiles/Delete.cshtml
+++ b/Notes.Web/Views/UploadFiles/Delete.cshtml
@@ -1,7 +1,22 @@
 ﻿@inject IViewLocalizer Localizer
+@model UploadFileViewModel
 
 @{
     ViewData["Title"] = Localizer["Delete upload file"];
 }
 
 <h2 class="pb-2 mb-4 border-bottom">@ViewData["Title"]</h2>
+
+<div class="alert alert-danger" role="alert">@Localizer["The following data is deleted. Please check and click the {0} button.", Localizer["Delete"]]</div>
+
+<partial name="_Details" />
+
+<form method="post" role="form" asp-controller="UploadFiles" asp-action="Delete" asp-route-id="@Model.Id">
+    <div class="form-group row mainbtn-area">
+        <div class="col-sm-12">
+            <div class="float-right">
+                <input type="submit" value="@Localizer["Delete"]" class="btn btn-danger" />
+            </div>
+        </div>
+    </div>
+</form>
