--- a/Notes.Web/Views/UploadFiles/Edit.cshtml
+++ b/Notes.Web/Views/UploadFiles/Edit.cshtml
@@ -1,7 +1,19 @@
 ﻿@inject IViewLocalizer Localizer
+@model UploadFileViewModel
 
 @{
     ViewData["Title"] = Localizer["Edit upload file"];
 }
 
 <h2 class="pb-2 mb-4 border-bottom">@ViewData["Title"]</h2>
+
+<form method="post" enctype="multipart/form-data" role="form" asp-controller="UploadFiles" asp-action="Edit" asp-route-id="@Model.Id">
+    <partial name="_Form" />
+    <div class="form-group row mainbtn-area">
+        <div class="col-sm-12">
+            <div class="float-right">
+                <input type="submit" value="@Localizer["Edit"]" class="btn btn-primary" />
+            </div>
+        </div>
+    </div>
+</form>
