--- a/Notes.Web/Views/UploadFiles/Index.cshtml
+++ b/Notes.Web/Views/UploadFiles/Index.cshtml
@@ -7,6 +7,11 @@
 
 <h2 class="pb-2 mb-4 border-bottom">@ViewData["Title"]</h2>
 
+@if (TempData["Success"] != null)
+{
+    <div class="alert alert-success" role="alert">@TempData["Success"]</div>
+}
+
 <table class="table table-bordered table-hover">
     <thead>
         <tr>
