--- a/Notes.Web/Views/UploadFiles/_Form.cshtml
+++ b/Notes.Web/Views/UploadFiles/_Form.cshtml
@@ -4,11 +4,13 @@
     <label for="file" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.File)</label>
     <div class="col-sm-10">
         <input type="file" id="file" class="form-control-file" asp-for="File" />
+        <span asp-validation-for="File"></span>
     </div>
 </div>
 <div class="form-group row">
     <label for="fileName" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.FileName)</label>
     <div class="col-sm-10">
         <input type="text" id="fileName" class="form-control" asp-for="FileName" />
+        <span asp-validation-for="FileName"></span>
     </div>
 </div>
