--- a/Notes.Web/Views/UploadFiles/Index.cshtml
+++ b/Notes.Web/Views/UploadFiles/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@inject IViewLocalizer Localizer
-@model IEnumerable<UploadFileViewModel>
+@model IAsyncEnumerable<UploadFileViewModel>
 
 @{
     ViewData["Title"] = Localizer["Index upload files"];
@@ -15,15 +15,15 @@
 <table class="table table-bordered table-hover">
     <thead>
         <tr>
-            <th class="text-center">@Html.DisplayNameFor(model => model.Id)</th>
-            <th class="text-center">@Html.DisplayNameFor(model => model.FileName)</th>
-            <th class="text-center">@Html.DisplayNameFor(model => model.ContentType)</th>
-            <th class="text-center">@Html.DisplayNameFor(model => model.Length)</th>
+            <th class="text-center">@Html.DisplayNameForInnerType((UploadFileViewModel model) => model.Id)</th>
+            <th class="text-center">@Html.DisplayNameForInnerType((UploadFileViewModel model) => model.FileName)</th>
+            <th class="text-center">@Html.DisplayNameForInnerType((UploadFileViewModel model) => model.ContentType)</th>
+            <th class="text-center">@Html.DisplayNameForInnerType((UploadFileViewModel model) => model.Length)</th>
             <th class="text-center">@Localizer["Action"]</th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @await foreach (var item in Model)
         {
             <tr>
                 <td class="vertical-middle text-center">@Html.DisplayFor(_ => item.Id)</td>
