--- a/Notes.Web/Views/UploadFiles/_Details.cshtml
+++ b/Notes.Web/Views/UploadFiles/_Details.cshtml
@@ -19,3 +19,9 @@
         <p class="form-control-static">@Localizer["{0} bytes", @Html.DisplayFor(model => model.Length)]</p>
     </div>
 </div>
+<div class="form-group row">
+    <label for="file" class="col-sm-2 col-form-label">@Html.DisplayNameFor(model => model.HashValue)</label>
+    <div class="col-sm-10 col-form-label">
+        <p class="form-control-static">@Html.DisplayFor(model => model.HashValue)</p>
+    </div>
+</div>
