--- a/Notes.Web/Views/UploadFiles/Edit.cshtml
+++ b/Notes.Web/Views/UploadFiles/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <h2 class="pb-2 mb-4 border-bottom">@ViewData["Title"]</h2>
 
-@if (ViewData["Warning"] != null)
+@if (ViewData["Warning"] is not null)
 {
     <div class="alert alert-warning" role="alert">@ViewData["Warning"]</div>
 }
