--- a/Notes.Web/Views/UploadFiles/Index.cshtml
+++ b/Notes.Web/Views/UploadFiles/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h2 class="pb-2 mb-4 border-bottom">@ViewData["Title"]</h2>
 
-@if (TempData["Success"] != null)
+@if (TempData["Success"] is not null)
 {
     <div class="alert alert-success" role="alert">@TempData["Success"]</div>
 }
